// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image - AmpImg should render image with custom dimensions correctly 1`] = `
<div>
  <amp-img
    alt="By Elisa Decker, from her series "Sidewalk""
    attribution="Elisa Decker"
    fallback=""
    height="547"
    layout="responsive"
    sizes="100vw"
    src="https://ichef.bbci.co.uk/ace/ws/300/cpsprodpb/164BB/production/_104032319_03270dcc-9dda-4bd4-96a0-db89f6b915ae.jpg"
    width="445"
  />
</div>
`;

exports[`Image - AmpImg should render image with only srcset correctly 1`] = `
<div>
  <amp-img
    alt="Student sitting an exam"
    attribution=""
    fallback=""
    height="576"
    layout="responsive"
    sizes="100vw"
    src="https://ichef.bbci.co.uk/ace/ws/300/cpsprodpb/7098/production/_104842882_students.jpg"
    width="1024"
  />
</div>
`;

exports[`Image - AmpImg should render image with srcset and fallbackSrcset correctly 1`] = `
<div>
  <amp-img
    alt="Student sitting an exam"
    attribution=""
    fallback=""
    height="576"
    layout="responsive"
    sizes="100vw"
    src="https://ichef.bbci.co.uk/ace/ws/300/cpsprodpb/7098/production/_104842882_students.jpg"
    srcset="https://ichef.bbci.co.uk/ace/ws/300/cpsprodpb/7098/production/_104842882_students.jpg 300w, https://ichef.bbci.co.uk/ace/ws/450/cpsprodpb/7098/production/_104842882_students.jpg 450w, https://ichef.bbci.co.uk/ace/ws/600/cpsprodpb/7098/production/_104842882_students.jpg 600w, https://ichef.bbci.co.uk/ace/ws/1024/cpsprodpb/7098/production/_104842882_students.jpg 1024w"
    width="1024"
  />
</div>
`;

exports[`Image - AmpImg should render landscape image correctly 1`] = `
<div>
  <amp-img
    alt="Student sitting an exam"
    attribution=""
    fallback=""
    height="576"
    layout="responsive"
    sizes="100vw"
    src="https://ichef.bbci.co.uk/ace/ws/300/cpsprodpb/7098/production/_104842882_students.jpg"
    width="1024"
  />
</div>
`;

exports[`Image - AmpImg should render portrait image correctly 1`] = `
<div>
  <amp-img
    alt="Map of the UK displaying Syrian refugees and asylum seekers per 10000 population. Ranges from 0 to 17."
    attribution="BBC"
    fallback=""
    height="1280"
    layout="responsive"
    sizes="100vw"
    src="https://ichef.bbci.co.uk/ace/ws/300/cpsprodpb/439A/production/_100960371_syrians_and_asylum_v2-nc.png"
    width="1024"
  />
</div>
`;

exports[`Image - AmpImg should render square image correctly 1`] = `
<div>
  <amp-img
    alt="Tracks through the snow"
    attribution="BBC"
    fallback=""
    height="1024"
    layout="responsive"
    sizes="100vw"
    src="https://ichef.bbci.co.uk/ace/ws/300/cpsprodpb/114FE/production/_104801907_79010.jpg"
    width="1024"
  />
</div>
`;
